# OzmaMCP

./: AGENTS.md  README.md  pyproject.toml
docs/: CHANGELOG_AUTHOR_Daniil_Nuzhdin_2026-03-09.md
docs/wiki/: color-variants.md  full.md  fundb-api.md  fundb.md  funql.md  index.md
docs/wiki/funapp/: board.md  form.md  menu.md  settings.md  table.md  timeline.md  tree.md
ozma_async/: async_api_helpers.py  async_auth_api.py  background_loop.py  data_api.py  httpx_client.py
ozma_mcp/: server.py
scripts/: export_wiki_docs.py
