[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ozma-mcp"
version = "0.1.0"
description = "MCP server for OzmaDB (FunDB) — query, insert, update, delete and run actions"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "aiofiles>=24.0.0",
]

[project.scripts]
ozma-mcp = "ozma_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["ozma_mcp", "ozma_async"]
